<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Toolbar with Back Button -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:padding="16dp"

            android:src="@drawable/home_24" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_marginBottom="16dp">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <ImageView
                        android:id="@+id/profile_image"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/trojan"
                        android:clickable="true"
                        android:focusable="true" />

                    <View
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:background="@drawable/green_circle"
                        android:layout_gravity="bottom|end"
                        android:layout_margin="8dp"
                        android:layout_marginBottom="3dp" />

                </FrameLayout>

                <TextView
                    android:id="@+id/display_uscid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="USC ID: "
                    android:textSize="16sp"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:gravity="center_horizontal">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:text=" Username: "
                    android:drawableLeft="@drawable/person_24"
                    android:backgroundTint="@color/red"
                    android:inputType="text"
                    android:layout_marginBottom="8dp"/>

                <EditText
                    android:id="@+id/email"
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:text=" Email: "
                    android:drawableLeft="@drawable/email_24"
                    android:backgroundTint="@color/red"
                    android:inputType="textEmailAddress"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Future Reservations"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="16dp" />

                <!-- RecyclerView for displaying future reservations -->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewFutureReservations"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp" />

                <!-- TextView for when there are no reservations -->
                <TextView
                    android:id="@+id/noReservationsTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="No future reservations"
                    android:visibility="gone"
                    android:textSize="16sp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="16dp" />

            </LinearLayout>

            <Button
                android:id="@+id/reservation_history_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Reservation History"
                android:gravity="center" />

            <Button
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Log Out"
                android:layout_marginTop="5dp"
                android:gravity="center" />

        </LinearLayout>

    </ScrollView>
    </LinearLayout>

